docs/docs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-pages-docs-mdapi-ch
  namespace: bootstrap
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: docs.mdapi.ch
    http:
      paths:
      - backend:
          service:
            name: gitlab-gitlab-pages
            port:
              number: 8090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - docs.mdapi.ch
    secretName: docs-mdapi-ch-cert
